[package]
name = "seahash-py"
version = "0.2.0"
edition = "2021"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "seahash"
crate-type = ["cdylib"]

[dependencies]
pyo3 = { version = "0.20.3", features = ["extension-module"] }
seahash = "4.1.0"

[build-dependencies]
pyo3-build-config = { version = "0.22.0", features = ["resolve-config"] }

