[build-system]
requires = ["maturin>=0.12,<0.13"]
build-backend = "maturin"

[project]
name = "seahash"
requires-python = ">=3.7"
license = {file = "LICENSE"}
readme = "README.md"
classifiers = [
    "Programming Language :: Rust",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python :: Implementation :: PyPy",
    "Development Status :: 4 - Beta",
    "License :: OSI Approved :: MIT License",
    "Typing :: Typed"
]
keywords = ["hash", "hashing", "checksum", "checksumming", "portable"]

[project.urls]
homepage = "https://github.com/RealOrangeOne/seahash-py"

[project.optional-dependencies]
dev = [
  "pytest==7.1.2",
  "black==22.6.0"
]
