[build-system]
requires = ["maturin>=0.14,<0.15"]
build-backend = "maturin"

[project]
name = "seahash"
description = "A blazingly fast, portable hash function with proven statistical guarantees"
requires-python = ">=3.7"
license = {file = "LICENSE"}
readme = "README.md"
classifiers = [
    "Programming Language :: Rust",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python :: Implementation :: PyPy",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Development Status :: 4 - Beta",
    "License :: OSI Approved :: MIT License",
    "Typing :: Typed"
]
keywords = ["hash", "hashing", "checksum", "checksumming", "portable"]

[project.urls]
Source = "https://github.com/RealOrangeOne/seahash-py"
Changelog = "https://github.com/RealOrangeOne/seahash-py/releases"
Issues = "https://github.com/RealOrangeOne/seahash-py/issues"

[project.optional-dependencies]
dev = [
  "pytest==7.1.2",
  "black==22.6.0"
]
