[build-system]
requires = ["maturin>=1.5,<1.6"]
build-backend = "maturin"

[project]
name = "seahash"
description = "A blazingly fast, portable hash function with proven statistical guarantees"
requires-python = ">=3.8"
license = {file = "LICENSE"}
readme = "README.md"
classifiers = [
    "Programming Language :: Rust",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python :: Implementation :: PyPy",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Development Status :: 4 - Beta",
    "License :: OSI Approved :: MIT License",
    "Typing :: Typed"
]
keywords = ["hash", "hashing", "checksum", "checksumming", "portable"]

[project.urls]
Source = "https://github.com/RealOrangeOne/seahash-py"
Changelog = "https://github.com/RealOrangeOne/seahash-py/releases"
Issues = "https://github.com/RealOrangeOne/seahash-py/issues"

[project.optional-dependencies]
dev = [
    "pytest==8.3.2",
    "ruff==0.3.0"
]
